--- a/Leader/View/Home.storyboard
+++ b/Leader/View/Home.storyboard
@@ -20,6 +20,11 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qgp-QD-INo">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="CJf-uI-lGR">
+                                    <rect key="frame" x="0.0" y="101.5" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="attendanceCell" id="1aW-O1-3l6" customClass="AttendanceTableViewCell" customModule="Leader" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="45.5"/>
@@ -37,14 +42,14 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHU-wr-FP2">
+                                                <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHU-wr-FP2">
                                                     <rect key="frame" x="345" y="10.5" width="25" height="25"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="a74-Ol-B9n"/>
                                                         <constraint firstAttribute="width" constant="25" id="afG-KD-tzr"/>
                                                     </constraints>
-                                                    <state key="normal" image="Checkmark"/>
+                                                    <state key="normal" image="Nothing" backgroundImage="Nothing"/>
                                                     <connections>
                                                         <action selector="buttonPressed:" destination="1aW-O1-3l6" eventType="touchUpInside" id="gTa-MQ-kUt"/>
                                                     </connections>
@@ -76,14 +81,23 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="U1F-Re-T8e"/>
                     </view>
-                    <navigationItem key="navigationItem" id="wSw-Pa-gfW"/>
+                    <navigationItem key="navigationItem" id="wSw-Pa-gfW">
+                        <barButtonItem key="backBarButtonItem" title="Done" id="nwz-be-nVr">
+                            <connections>
+                                <action selector="donePressed:" destination="MxD-Qb-T78" id="Qxr-7m-74D"/>
+                            </connections>
+                        </barButtonItem>
+                        <connections>
+                            <outlet property="backBarButtonItem" destination="nwz-be-nVr" id="Azx-hi-a60"/>
+                        </connections>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="Qgp-QD-INo" id="dhM-ZJ-QgN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="idJ-yr-zgo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3672.8000000000002" y="-1682.608695652174"/>
+            <point key="canvasLocation" x="3812" y="-1681"/>
         </scene>
         <!--Member View Controller-->
         <scene sceneID="DmF-zM-wck">
@@ -146,7 +160,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j1E-yA-oiJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2970" y="-2350"/>
+            <point key="canvasLocation" x="3038" y="-2348"/>
         </scene>
         <!--Meeting MinutesVC-->
         <scene sceneID="odO-gb-JHD">
@@ -202,6 +216,10 @@
                                             <state key="normal" title="Save">
                                                 <color key="titleColor" red="0.066666666669999999" green="0.31764705879999999" blue="0.45098039220000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             </state>
+                                            <connections>
+                                                <action selector="savePressed:" destination="ayI-rB-SK2" eventType="touchUpInside" id="wZP-LL-OIo"/>
+                                                <segue destination="UtC-4U-wRA" kind="show" id="d8Z-5I-BLx"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -276,7 +294,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHm-vL-puO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2928.8000000000002" y="-1681.7091454272866"/>
+            <point key="canvasLocation" x="3038" y="-1681"/>
         </scene>
         <!--Competitive Events-->
         <scene sceneID="yCA-vX-CQd">
@@ -355,14 +373,20 @@
                             <outlet property="delegate" destination="jUG-bY-ovP" id="o7m-Bm-00v"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="YsG-kS-E2z"/>
+                    <navigationItem key="navigationItem" id="XoG-Qd-eo6">
+                        <barButtonItem key="rightBarButtonItem" title="Your Events" id="fkP-ah-ZRe">
+                            <connections>
+                                <segue destination="bkc-gv-LOY" kind="show" id="Bgl-lb-ubG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="competitiveEventsTableView" destination="8gy-m4-L1d" id="pnN-tW-bff"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="92u-Hf-NBu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2282" y="-363"/>
+            <point key="canvasLocation" x="2263" y="-365"/>
         </scene>
         <!--Competitive Event DetailsVC-->
         <scene sceneID="GOm-YJ-7IZ">
@@ -530,7 +554,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="geq-gS-We8"/>
                     </view>
-                    <navigationItem key="navigationItem" id="mwD-8H-9ny"/>
+                    <navigationItem key="navigationItem" id="mwD-8H-9ny">
+                        <barButtonItem key="backBarButtonItem" title="Cancel" id="7cR-uf-QXf"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="categoryLabel" destination="erC-8C-xMS" id="ud8-GC-KkX"/>
                         <outlet property="nameLabel" destination="ypa-4c-dDO" id="oKI-Ku-T38"/>
@@ -563,6 +589,7 @@
                                     </state>
                                     <connections>
                                         <action selector="savePressed:" destination="bkc-gv-LOY" eventType="touchUpInside" id="NXX-Sb-CuE"/>
+                                        <segue destination="oK6-oI-ZhX" kind="show" id="YhL-RU-yN0"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwZ-a8-al7">
@@ -574,7 +601,7 @@
                                     </state>
                                     <connections>
                                         <action selector="submitPressed:" destination="bkc-gv-LOY" eventType="touchUpInside" id="3Ef-xd-61l"/>
-                                        <segue destination="oK6-oI-ZhX" kind="show" id="oAW-lf-1zu"/>
+                                        <segue destination="oK6-oI-ZhX" kind="show" identifier="goToHome" id="e71-1n-TFx"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -622,7 +649,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xMo-Pu-peA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3948" y="-365.66716641679164"/>
+            <point key="canvasLocation" x="3812" y="-365"/>
         </scene>
         <!--Current Events-->
         <scene sceneID="gLL-3c-cKr">
@@ -868,12 +895,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mkP-am-tNJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2969" y="-1012"/>
+            <point key="canvasLocation" x="3038" y="-1012"/>
         </scene>
         <!--Home-->
         <scene sceneID="sXc-0L-c2U">
             <objects>
-                <viewController storyboardIdentifier="Home" title="Home" id="oK6-oI-ZhX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Home" title="Home" id="oK6-oI-ZhX" customClass="HomeVC" customModule="Leader" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SE7-6c-PMe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -948,7 +975,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gmB-ww-h2F"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="HomeIcon" selectedImage="HomeIcon" id="rCq-x6-oG8"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="Home" selectedImage="Home" id="rCq-x6-oG8"/>
                     <navigationItem key="navigationItem" title="FBLA" id="l9A-yy-Tyr"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Hi-eI-QKZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1121,10 +1148,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Checkmark" width="45" height="45"/>
-        <image name="HomeIcon" width="25" height="25"/>
+        <image name="Home" width="25" height="25"/>
+        <image name="Nothing" width="45" height="45"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="oAW-lf-1zu"/>
+        <segue reference="d8Z-5I-BLx"/>
+        <segue reference="e71-1n-TFx"/>
+        <segue reference="Bgl-lb-ubG"/>
     </inferredMetricsTieBreakers>
 </document>
